SDSS-1046: D9.5 | Fixed navigation wrapping and search icon styles (#282)
* SDSS-1046: D9.5 | Fixed navigation wrapping and search icon styles.

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/header/_header-option-a.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/header/_header-option-a.scss
@@ -35,12 +35,17 @@ body.sdss-header-variant--option_a {
 @include grid-media-min('lg') {
   body.sdss-header-variant--option_a {
     header.su-masthead {
-      // margin: 0 auto;
+
+      #sdss-button--search-link {
+        margin: auto 10rem auto auto;
+        position: relative;
+      }
 
       section.su-masthead--inner {
         position: relative;
         display: flex;
         justify-content: flex-start;
+        flex-wrap:  nowrap;
         background: $sdss-color-blue-light;
 
         &::after {
@@ -56,8 +61,8 @@ body.sdss-header-variant--option_a {
 
         .system-menu-block {
           align-self: flex-end;
-          width: auto;
           padding: 0 0 0 3rem;
+          width: 90%;
         }
 
         .su-multi-menu {
@@ -67,6 +72,7 @@ body.sdss-header-variant--option_a {
           .su-multi-menu__menu {
             &.su-multi-menu__menu-lv1 {
               background-color: $sdss-color-blue-light;
+              padding-right: 3rem;
             }
           }
         }
